--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
   "author": "changjun",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "webpack": "^4.11.1",
     "webpack-cli": "^3.0.2",
     "webpack-merge": "^4.1.2"
